--- a/public/css/succes.css
+++ b/public/css/succes.css
@@ -1,7 +1,7 @@
 #succes{
     height: 100vh;
     /* background-image: url(); */
-    background-color: cadetblue;
+    /* background-color: cadetblue; */
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
